Ajout Endpoints salles
